feat: create struct to sales mode
